@@ -9,7 +9,7 @@ buildscript {
 }
 apply plugin: 'net.minecraftforge.gradle.forge'
 
-version = "1.3.11"
+version = "1.3.12"
 def silentlib_version = "2.2.16"
 def buildNum = 0;
 group = "net.silentchaos512.scalinghealth"
