@@ -1,4 +1,5 @@
 1.3.12
+Added: Config for food consumption (exhaustion) of bonus player regen. Value also increased. Default is 0.1 (still many times less than vanilla regen), old value was 0.025.
 Fixed: All rows of hearts drawing, instead of just the top two (FPS boost for players with lots of hearts)
 
 1.3.11
